# tpl-ac-local-app

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  VSOpenFileFromDirFilters.json  get-ac-build.cmake  main.cpp
.github/workflows/: build.yml
